--- a/content/sitemap.njk
+++ b/content/sitemap.njk
@@ -1,6 +1,6 @@
 ---
-permalink: /sitemap.xml
+permalink: sitemap.xml
 layout: null
 eleventyExcludeFromCollections: true
 ---
-{% sitemap collections.all %}
+{% sitemap collections.sitemap %}
