--- a/content/posts.njk
+++ b/content/posts.njk
@@ -1,4 +1,4 @@
-{% if links | length %}
+{% if collections.posts | length %}
 <ul class="postlist">
 {%- for post in collections.posts | reverse %}
 	<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
