--- a/_includes/css/index.css
+++ b/_includes/css/index.css
@@ -8,7 +8,6 @@ body {
 
 body {
   font-family: Verdana, sans-serif;
-  font-size: large;
 }
 
 html, body, body > * {
@@ -25,6 +24,10 @@ body > * {
 
 main {
   flex: 1;
+}
+
+header, footer {
+  font-size: large;
 }
 
 header {
