--- a/_includes/css/index.css
+++ b/_includes/css/index.css
@@ -14,7 +14,7 @@ html, body, body > * {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  text-align: justify;
 }
 
 body > * {
