--- a/content/posts.njk
+++ b/content/posts.njk
@@ -2,7 +2,7 @@
 <ul class="postlist">
 {%- for post in collections.posts | reverse %}
 	<li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
-		<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("yyyy-LL-dd - H:mm") }}</time>:
+		<time class="postlist-date" datetime="{{ post.date | htmlDateString }}">{{ post.date | readableDate("LLL dd, yyyy - H:mm ZZZZ") }}</time>:
         <a href="{{ post.url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
 	</li>
 {%- endfor %}
