--- a/_includes/layouts/head.njk
+++ b/_includes/layouts/head.njk
@@ -8,4 +8,5 @@
 {% endif %}
 <link rel="shortcut icon" type="image/bmp" href="/favicon.ico">
 <link rel="stylesheet" href="/css/theme.css">
+<link rel="stylesheet" href="/css/prism.css">
 <title>{{ title }}</title>
