--- a/_includes/css/index.css
+++ b/_includes/css/index.css
@@ -54,6 +54,10 @@ hr {
   width: calc(100% - 2 * var(--side-margin));
 }
 
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+}
+
 pre {
   text-wrap: wrap;
 }
