--- a/_includes/layouts/head.njk
+++ b/_includes/layouts/head.njk
@@ -9,4 +9,5 @@
 <link rel="shortcut icon" type="image/bmp" href="/favicon.ico">
 <link rel="stylesheet" href="/css/theme.css">
 <link rel="stylesheet" href="/css/prism.css">
+<link href="/posts/feed.xml" type="application/atom+xml" rel="alternate" title="Blog post Atom feed" />
 <title>{{ title }}</title>
