--- a/content/posts/feed.njk
+++ b/content/posts/feed.njk
@@ -32,7 +32,10 @@
     <link href="{{ absolutePostUrl }}" />
     <updated>{{ post.date | dateToRfc3339 }}</updated>
     <id>{{ absolutePostUrl }}</id>
-    <content type="html">{{ post.content | renderTransforms(post.data.page, metadata.base) }}</content>
+    <content type="html">
+      <a href="{{post.url}}" target="_blank">Full article here</a>
+      {{ post.content | renderTransforms(post.data.page, metadata.base) | truncate(1000) }}
+    </content>
   </entry>
   {%- endfor %}
 </feed>
